# SwitchCaps

./: CMakeLists.txt  README.md  resource.rc
Source/: main.cpp  main.hpp
